<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="jp.co.rakuten.ticket.checkinstation.ui.general.generalAgain.GeneralAgainViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.login.LoginFragment">

        <Button
            android:id="@+id/buttonTop"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/marginal_button_top"
            android:textSize="@dimen/menu_subtitle_text_size"
            android:textColor="@color/white"
            android:backgroundTint="@color/black"
            android:background="@drawable/button_rectangle_radius_shape"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/numberLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/passwordUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_password"
                android:textSize="@dimen/menu_title_text_size"
                android:textColor="@color/black"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/password"
                style="@style/LoginEditText"
                android:layout_width="400dp"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_login_edittext"
                android:maxLines="1"
                android:textSize="@dimen/menu_subtitle_text_size"
                android:text="@={viewModel.number}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordUnit" />

            <TextView
                android:id="@+id/noticeMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_password_notice"
                android:textSize="@dimen/menu_subtitle_text_size"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/marginal_button_back"
            android:textSize="@dimen/menu_subtitle_text_size"
            android:textColor="@color/white"
            android:backgroundTint="#BC444544"
            android:background="@drawable/button_rectangle_radius_shape"
            android:layout_marginStart="100dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="240dp"
            android:layout_height="60dp"
            android:text="@string/marginal_button_next_begin"
            android:textSize="@dimen/menu_subtitle_text_size"
            android:textColor="@color/white"
            android:backgroundTint="@color/orange"
            android:background="@drawable/button_rectangle_radius_shape"
            android:layout_marginBottom="50dp"
            android:layout_marginEnd="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <FrameLayout
            android:id="@+id/loadingLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"
            tools:visibility="visible">

            <include layout="@layout/layout_card_loading" />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

