<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="jp.co.rakuten.ticket.checkinstation.ui.menu.qrcodeImage.QRCodeImageViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@color/light_gray">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/titleBackView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/bright_yellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/qrcodeImageTitle"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:padding="10dp"
                android:text="@string/qrcode_image_setting"
                android:textSize="@dimen/menu_title_text_size"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/listBackView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/buttonBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleBackView">

            <Button
                android:id="@+id/fileSelected"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:padding="10dp"
                android:text="@string/file_select_image"
                android:textSize="@dimen/menu_subtitle_text_size"
                android:layout_marginTop="120dp"
                android:textColor="@color/black"
                android:background="@drawable/bg_qrcode_image_select"
                android:layout_marginStart="50dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/defaultImageSelected"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:text="@string/default_image"
                android:textSize="@dimen/menu_subtitle_text_size"
                android:textColor="@color/black"
                android:background="@drawable/bg_qrcode_image_select"
                android:layout_marginStart="50dp"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@id/fileSelected"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:id="@+id/qrcodeImageView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginVertical="50dp"
                android:src="@drawable/message"
                app:layout_constraintStart_toEndOf="@id/fileSelected"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/marginal_button_back"
            android:textSize="@dimen/menu_subtitle_text_size"
            android:textColor="@color/white"
            android:backgroundTint="#BC444544"
            android:background="@drawable/button_rectangle_radius_shape"
            android:layout_marginStart="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintTop_toBottomOf="@id/listBackView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>