<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="jp.co.rakuten.ticket.checkinstation.ui.general.generalQRStep1.GeneralQRStep1ViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.login.LoginFragment">

        <Button
            android:id="@+id/buttonMenu"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_rectangle_shape"
            android:backgroundTint="@color/black"
            android:text="@string/marginal_button_menu"
            android:textColor="@color/white"
            android:textSize="@dimen/menu_subtitle_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/noticeBackView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="300dp"
            android:layout_marginEnd="300dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/QRLayout">

            <ImageView
                android:id="@+id/noticeImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/message"
                android:adjustViewBounds="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/buttonTop"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/button_rectangle_radius_shape"
            android:backgroundTint="@color/black"
            android:text="@string/marginal_button_top"
            android:textColor="@color/white"
            android:textSize="@dimen/menu_subtitle_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/QRLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="140dp"
            android:layout_marginBottom="150dp">

            <jp.co.rakuten.ticket.checkinstation.ui.common.RoundedView
                android:id="@+id/QRLayoutRoundedView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.journeyapps.barcodescanner.BarcodeView
                    android:id="@+id/barcodeSurfaceView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layerType="hardware"
                    app:zxing_framing_rect_height="250dp"
                    app:zxing_framing_rect_width="250dp" />

                <jp.co.rakuten.ticket.checkinstation.ui.common.ScanQRShowView
                    android:id="@+id/customFinderView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:qrCode_borderColor="@color/white"
                    app:zxing_possible_result_points="@color/zxing_custom_possible_result_points"
                    app:zxing_result_view="@color/white"
                    app:zxing_viewfinder_laser="@color/zxing_custom_viewfinder_laser"
                    app:zxing_viewfinder_mask="@color/zxing_custom_viewfinder_mask" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/scan_qrcode_notice"
                    android:textColor="@color/white"
                    android:textSize="@dimen/menu_title_text_size" />

            </jp.co.rakuten.ticket.checkinstation.ui.common.RoundedView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginStart="100dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/button_rectangle_radius_shape"
            android:backgroundTint="#BC444544"
            android:text="@string/marginal_button_back"
            android:textColor="@color/white"
            android:textSize="@dimen/menu_subtitle_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonAgain"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/button_rectangle_shape"
            android:backgroundTint="@color/black"
            android:text="@string/marginal_button_again_false"
            android:textColor="@color/white"
            android:textSize="@dimen/menu_subtitle_text_size"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="180dp"
            android:background="@drawable/button_rectangle_shape"
            android:backgroundTint="@color/black"
            android:text="@string/marginal_button_logout"
            android:textColor="@color/white"
            android:textSize="@dimen/menu_subtitle_text_size"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <FrameLayout
            android:id="@+id/loadingLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"
            tools:visibility="visible">

            <include layout="@layout/layout_card_loading" />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

